@@ -84,6 +84,12 @@ public:
     //
     void detach();
 
+    //
+    // Check whether a thread is still alive. This is useful to implement
+    // a non-blocking join().
+    //
+    bool isAlive() const;
+
     static void sleep(const Time&);
     static void yield();
 
