@@ -1,0 +1,31 @@
+// **********************************************************************
+//
+// Copyright (c) 2003
+// ZeroC, Inc.
+// Billerica, MA, USA
+//
+// All Rights Reserved.
+//
+// Ice is free software; you can redistribute it and/or modify it under
+// the terms of the GNU General Public License version 2 as published by
+// the Free Software Foundation.
+//
+// **********************************************************************
+
+#ifndef ALIVE_TEST_H
+#define ALIVE_TEST_H
+
+#include <TestBase.h>
+
+class AliveTest : public TestBase
+{
+public:
+
+    AliveTest();
+
+private:
+    
+    virtual void run();
+};
+
+#endif
