@@ -18,6 +18,7 @@
 #include <RWRecMutexTest.h>
 #include <CreateTest.h>
 #include <DetachTest.h>
+#include <AliveTest.h>
 #include <StartTest.h>
 #include <MonitorMutexTest.h>
 #include <MonitorRecMutexTest.h>
@@ -29,6 +30,7 @@ initializeTestSuite()
 {
     allTests.push_back(new CreateTest);
     allTests.push_back(new DetachTest);
+    allTests.push_back(new AliveTest);
     allTests.push_back(new StartTest);
     allTests.push_back(new MutexTest);
     allTests.push_back(new RecMutexTest);
